added blog post links on the index page. Added back links to the blog posts.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
   <body>
 
+    <h2>Dan Blake's EDA Adventure</h2>
+
+    <h4>Blog Posts</h4>
+
+    <a href="blog/c1-reflection-blog.html">First Impressions</a>
+    <br>
+    <a href="blog/c1-time-and-habits-blog.html">Habit and Time management techniques</a>
+
 
   </body>
 </html>
