--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dan Blake's EDA Adventure </title>
+    <title>Dan Blake's EDA Adventure!</title>
     <meta charset="UTF-8">
+
+    <!-- My CSS Stylesheet-->
+    <link rel="stylesheet" type="text/css" href="stylesheets/blog_stylesheet.css">
+
   </head>
 
   <body>
 
-    <h2>Dan Blake's EDA Adventure</h2>
+    <div id="heading-container">
+      <h1>Dan Blake's EDA Adventure!</h1>
+    </div>
 
-    <h4>Blog Posts</h4>
+    <div id="blog-links-container">
 
-    <a href="blog/c1-reflection-blog.html">First Impressions</a>
-    <br>
-    <a href="blog/c1-time-and-habits-blog.html">Habit and Time management techniques</a>
+      <h4>Blog Posts</h4>
 
+      <a href="blog/c1-reflection-blog.html" class="blog-link">First Impressions and Reflection</a>
+      <br>
+      <a href="blog/c1-time-and-habits-blog.html" class="blog-link">Habit and Time management techniques</a>
+
+    </div>
 
   </body>
 </html>
