Updted the index page to a split screen format. Uploaded two background images.

--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
 
   <body>
 
-    <div id="heading-container">
-      <h1>Dan Blake's EDA Adventure!</h1>
+    <div id="left-panel">
+      <div id="heading-container">
+        <h1>Dan Blake's EDA Adventure!</h1>
+      </div>
     </div>
+    <div id="right-panel">
+      <div id="blog-links-container">
 
-    <div id="blog-links-container">
+        <h4>Blog Posts</h4>
 
-      <h4>Blog Posts</h4>
+        <a href="blog/c1-reflection-blog.html" class="blog-link">First Impressions and Reflection</a>
+        <br>
+        <a href="blog/c1-time-and-habits-blog.html" class="blog-link">Habit and Time management techniques</a>
 
-      <a href="blog/c1-reflection-blog.html" class="blog-link">First Impressions and Reflection</a>
-      <br>
-      <a href="blog/c1-time-and-habits-blog.html" class="blog-link">Habit and Time management techniques</a>
-
+      </div>
     </div>
-
   </body>
 </html>
