--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <div id="left-panel">
       <div id="heading-container">
-        <h1>Dan Blake's EDA Adventure!</h1>
+        <h1>Dan Blake's</h1>
+        <h1>EDA Adventure!</h1>
       </div>
     </div>
     <div id="right-panel">
