Added blog entry Udacity Reflection part 1. Updated index page to link to new blog post.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <a href="blog/c1-reflection-blog.html" class="blog-link">First Impressions and Reflection</a>
         <br>
         <a href="blog/c1-time-and-habits-blog.html" class="blog-link">Habit and Time management techniques</a>
+        <br>
+        <a href="blog/t2-html-css-dom-p1.html" class="blog-link">Udacity Reflection - Part 1</a>
 
       </div>
     </div>
