--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <a href="blog/c1-time-and-habits-blog.html" class="blog-link">Habit and Time management techniques</a>
         <br>
         <a href="blog/t2-html-css-dom-p1.html" class="blog-link">Udacity Reflection - Part 1</a>
+        <br>
+        <a href="blog/t2-html-css-dom-p2.html" class="blog-link">Udacity Reflection - Part 2</a>
 
       </div>
     </div>
