--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
 
     <!-- My CSS Stylesheet-->
-    <link rel="stylesheet" type="text/css" href="stylesheets/blog_stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="assets/stylesheets/blog_stylesheet.css">
+
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900|Raleway:300,400,700" rel="stylesheet">
 
   </head>
 
@@ -15,6 +18,7 @@
       <div id="heading-container">
         <h1>Dan Blake's</h1>
         <h1>EDA Adventure!</h1>
+        <p id="heading-subtitle">My journey to becomming a Web Developer</p>
       </div>
     </div>
     <div id="right-panel">
