--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
 
         <h4>Blog Posts</h4>
 
-        <a href="blog/c1-reflection-blog.html" class="blog-link">First Impressions and Reflection</a>
+        <p class="date">01 December 2016 </p><a href="blog/c1-reflection-blog.html" class="blog-link">First Impressions and Reflection</a>
         <br>
-        <a href="blog/c1-time-and-habits-blog.html" class="blog-link">Habit and Time management techniques</a>
+        <p class="date">03 December 2016 </p><a href="blog/c1-time-and-habits-blog.html" class="blog-link">Habit and Time management techniques</a>
         <br>
-        <a href="blog/t2-html-css-dom-p1.html" class="blog-link">Udacity Reflection - Part 1</a>
+        <p class="date">07 December 2016 </p><a href="blog/t2-html-css-dom-p1.html" class="blog-link">Udacity Reflection - Part 1</a>
         <br>
-        <a href="blog/t2-html-css-dom-p2.html" class="blog-link">Udacity Reflection - Part 2</a>
+        <p class="date">08 December 2016 </p><a href="blog/t2-html-css-dom-p2.html" class="blog-link">Udacity Reflection - Part 2</a>
+        <br>
+        <p class="date">11 December 2016 </p><a href="blog/c2-emotional-intelligence.html" class="blog-link">Search Inside Yourself - Chapter 1</a>
 
       </div>
     </div>
