--- a/index.html
+++ b/index.html
@@ -1,42 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dan Blake's EDA Adventure!</title>
+    <title></title>
     <meta charset="UTF-8">
 
     <!-- My CSS Stylesheet-->
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/blog_stylesheet.css">
 
-    <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900|Raleway:300,400,700" rel="stylesheet">
-
   </head>
-
   <body>
 
-    <div id="left-panel">
-      <div id="heading-container">
-        <h1>Dan Blake's</h1>
-        <h1>EDA Adventure!</h1>
-        <p id="heading-subtitle">My journey to becomming a Web Developer</p>
-      </div>
-    </div>
-    <div id="right-panel">
-      <div id="blog-links-container">
-
-        <h4>Blog Posts</h4>
-
-        <p class="date">01 December 2016 </p><a href="blog/c1-reflection-blog.html" class="blog-link">First Impressions and Reflection</a>
-        <br>
-        <p class="date">03 December 2016 </p><a href="blog/c1-time-and-habits-blog.html" class="blog-link">Habit and Time management techniques</a>
-        <br>
-        <p class="date">07 December 2016 </p><a href="blog/t2-html-css-dom-p1.html" class="blog-link">Udacity Reflection - Part 1</a>
-        <br>
-        <p class="date">08 December 2016 </p><a href="blog/t2-html-css-dom-p2.html" class="blog-link">Udacity Reflection - Part 2</a>
-        <br>
-        <p class="date">11 December 2016 </p><a href="blog/c2-emotional-intelligence.html" class="blog-link">Search Inside Yourself - Chapter 1</a>
-
-      </div>
-    </div>
   </body>
 </html>
