--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title></title>
-    <meta charset="UTF-8">
+<head>
+  <title>Dan Blake</title>
+  <meta charset="UTF-8">
+  <!-- My CSS Stylesheet-->
+  <link rel="stylesheet" type="text/css" href="assets/stylesheets/blog_stylesheet.css">
+  <!-- Normalise CSS-->
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+  <!-- Skeleton CSS-->
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+</head>
 
-    <!-- My CSS Stylesheet-->
-    <link rel="stylesheet" type="text/css" href="assets/stylesheets/blog_stylesheet.css">
+<body>
+<header class="row page-header-container">
+  <div class="two columns hamburger-container">
+    &#9776;
+  </div>
 
-  </head>
-  <body>
+  <div class="ten columns heading-container">
+    DAN BLAKE
+  </div>
 
-  </body>
+</header>
+
+
+</body>
 </html>
