updated stylings and added welcome message to index

--- a/index.html
+++ b/index.html
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Dan Blake</title>
-  <meta charset="UTF-8">
-  <!-- My CSS Stylesheet-->
-  <link rel="stylesheet" type="text/css" href="assets/stylesheets/blog_stylesheet.css">
-  <!-- Normalise CSS-->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
-  <!-- Skeleton CSS-->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
-</head>
+  <head>
+    <title>Dan Blake</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <!-- My CSS Stylesheet-->
+    <link rel="stylesheet" type="text/css" href="assets/stylesheets/blog_stylesheet.css">
+    <!-- Normalise CSS-->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+    <!-- Skeleton CSS-->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+  </head>
 
-<body>
-<header class="row page-header-container">
-  <div class="two columns hamburger-container">
-    &#9776;
-  </div>
+  <body>
 
-  <div class="ten columns heading-container">
-    DAN BLAKE
-  </div>
+    <div class="row site-header-wrapper">
+      <div class="hamburger-button">
+        &#9776;
+      </div>
+      <div class="name-container">
+        Dan Blake
+      </div>
+    </div>
 
-</header>
 
+    <div id="hero-container" class="row">
 
-</body>
+      <div id="welcome-container">
+        <h1>Welcome</h1>
+        <hr id="welcome-hr">
+        <p>Hey, I'm Dan Blake,</p>
+        <p>an aspiring Web Developer</p>
+        <p>currently studying at EDA.</p>
+        <br>
+        <p>Welcome to my website!</p>
+        <a class="button welcome-button" href="#">Latest blog</a>
+        <a class="button welcome-button" href="#">About me</a>
+
+      </div>
+
+    </div>
+
+  </body>
 </html>
