added contact section. Finish first draft of mobile site

--- a/index.html
+++ b/index.html
@@ -50,21 +50,44 @@
       <div class="row">
         <div class="six columns" id="about-text-container">
           <h3>Hi There!</h3>
-          <p>Thanks for thanking the time to visit my personal site! </p>
+          <p>Thanks for thanking the time to visit my site! </p>
           <br>
-          <p>Currently I am based in Wellington, New Zealand where I am developing my web development skills at Enspiral DevAcademy.</p>
+          <p>Currently I am based in Wellington, New Zealand where I am developing my web development skills at Enspiral DevAcademy. You can read more about my experience by checking out my blog.</p>
           <br>
           <p>I love the challange, creativity and problem solving that coding and web development brings and I have the goal or building sites that not only look great but also provide a fantasic user experience on any device.</p>
+
+          <a class="button hero-button" href="#">My Blog</a>
         </div>
 
         <div class="six columns">
           <img src="assets/images/me-pink-shaddow.jpg" alt=""  id="me-image">
         </div>
+      </div>
     </div>
-  </div>
+  <!-- End of About section -->
+    <div id="contact-section-wrapper">
+      <div id="contact-section-container" class="section-container">
+        <div class="row">
+          <div class="twelve columns" id="contact-container">
+            <h3>Let's chat!</h3>
+            <p>Feel free to get in contact via:</p>
+            <br>
+            <i class="fa fa-envelope fa-icon" aria-hidden="true"></i>
+            <i class="fa fa-linkedin-square fa-icon" aria-hidden="true"></i>
+            <i class="fa fa-github fa-icon" aria-hidden="true"></i>
+            <br>
+            <span id="made-by">Made by Dan Blake</span>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
 
   </body>
+
+  <!-- FontAwesome CDN -->
+  <script src="https://use.fontawesome.com/08c4c69269.js"></script>
+
 </html>
