final draft of Responsive index.html.

--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
           <p>Currently I am based in Wellington, New Zealand where I am developing my web development skills at Enspiral DevAcademy. You can read more about my experience by checking out my blog.</p>
           <br>
           <p>I love the challange, creativity and problem solving that coding and web development brings and I have the goal or building sites that not only look great but also provide a fantasic user experience on any device.</p>
-
           <a class="button hero-button" href="#">My Blog</a>
         </div>
-
         <div class="six columns">
           <img src="assets/images/me-pink-shaddow.jpg" alt=""  id="me-image">
         </div>
       </div>
     </div>
   <!-- End of About section -->
+
+
     <div id="contact-section-wrapper">
       <div id="contact-section-container" class="section-container">
         <div class="row">
@@ -72,9 +72,9 @@
             <h3>Let's chat!</h3>
             <p>Feel free to get in contact via:</p>
             <br>
-            <i class="fa fa-envelope fa-icon" aria-hidden="true"></i>
-            <i class="fa fa-linkedin-square fa-icon" aria-hidden="true"></i>
-            <i class="fa fa-github fa-icon" aria-hidden="true"></i>
+            <a href="#"><i class="fa fa-envelope fa-icon" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-linkedin-square fa-icon" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-github fa-icon" aria-hidden="true"></i></a>
             <br>
             <span id="made-by">Made by Dan Blake</span>
           </div>
