fixing spelling errors

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           <p>Hey, I’m Dan Blake,</p>
           <p>an aspiring web developer.</p>
           <br>
-          <p>As an EDA student I learning how to make </p>
-          <p>beautiful, clean and modern websites.</p>
+          <p>As an EDA student I'm learning how to make </p>
+          <p>beautiful, clean and modern websites!</p>
         </div>
         <div id="welcome-button-container">
           <a class="button hero-button" href="#">My Blog</a>
@@ -50,11 +50,11 @@
       <div class="row">
         <div class="six columns" id="about-text-container">
           <h3>Hi There!</h3>
-          <p>Thanks for thanking the time to visit my site! </p>
+          <p>Thanks for taking the time to visit my site! </p>
           <br>
           <p>Currently I am based in Wellington, New Zealand where I am developing my web development skills at Enspiral DevAcademy. You can read more about my experience by checking out my blog.</p>
           <br>
-          <p>I love the challange, creativity and problem solving that coding and web development brings and I have the goal or building sites that not only look great but also provide a fantasic user experience on any device.</p>
+          <p>I love the challange, creativity and problem solving that coding and web development brings and I have the goal of building sites that not only look great but also provide a fantasic user experience on any device.</p>
           <a class="button hero-button" href="#">My Blog</a>
         </div>
         <div class="six columns">
