added desktop navigation bar

--- a/index.html
+++ b/index.html
@@ -15,15 +15,20 @@
   <body>
     <div class="row" id="welcome-wrapper">
       <header class="row site-header-container">
-        <div class="twelve columns name-container">
-          Dan Blake
+        <div class="name-container">
+          Dan <span class="bold">Blake</span>
         </div>
-        <navigation class="desktop-navigation-container">
-          <!-- About  -->
-          <!-- Blog -->
-          <!-- Portfolio -->
-          <!-- Contact -->
-        </navigation>
+        <div class="desktop-navigation-container">
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+          </ul>
+        </div>
       </header>
 
       <div id="welcome-section-container" class="section-container">
