styled blog template. Added Desktop Navigation

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
   <body>
     <div class="row" id="welcome-wrapper">
-      <header class="row site-header-container">
-        <div class="name-container">
+      <header class="row site-header-container" id="homepage-header">
+        <div class="name-container" id="homepage-name">
           Dan <span class="bold">Blake</span>
         </div>
-        <div class="desktop-navigation-container">
+        <div class="desktop-navigation-container" id="homepage-nav">
           <ul>
             <li><a href="#">About</a></li>
             <li><a href="#">Blog</a></li>
