transfered blog to new template. Updated links

--- a/pages/blog-list.html
+++ b/pages/blog-list.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title></title>
-    <title>Search Inside Yourself - Chapter 1</title>
+    <title>Dan Blake - Blog</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <!-- My CSS Stylesheet-->
@@ -32,23 +32,30 @@
 
     <div class="section-container blog-contents">
 
-      <h3 class="blog-title">Search Inside Yourself - Chapter 1</h3>
-      <p class="blog-date">
-        08 December 2016
-      </p>
-      <h4>What learnings did you take from the chapter?</h4>
-      <p>
-        I learnt that mindfulness and emotional intelligence is essentially a skill, that like most skills can be trained. Being more emotionally aware means that you are aware of your body’s signals, your emotions and the emotions of others, and by being aware of these provides a variety of personal and professional benefits. Ming talked about how out of the 6 competencies that make up a high performing engineer, 4 of them were related to emotional intelligence.
-        I found it interesting that by increasing your emotional intelligence that you are able to become more self-aware and be able to recognise your body's subconscious reactions and bring those reactions to consciousness earlier, thus you are able to better manage a situation and the people involved.
-      </p>
-      <br>
-      <h4>How did you find the two minutes of mindfulness?</h4>
-      <p>
-        I have been trying out the Headspace App over the last few days and found the two minutes of mindfulness very similar uses very similar techniques to that found in the app. Both initially focus getting you to focus your mind on your body (such as your breathing) and then allowing it to wonder and observe your thoughts and the sounds, smells and sensations around you. It is an interesting experience although while it sounds easy, in practice I found it a bit tricky to keep focused, however and generally I felt a little calmer after performing these techniques.
-      </p>
-      <div id="back-button-container">
-        <a class="button hero-button go-back" href="../pages/blog-list.html">Go Back</a>
-      </div>
+      <h3 class="page-title">Blog Posts</h3>
+      <ul id="blog-post-list">
+        <li>
+          <p class="blog-date">11 December 2016</p>
+          <a href="../blog/c2-emotional-intelligence.html">Search Inside Yourself - Chapter 1</a>
+        </li>
+        <li>
+          <p class="blog-date">08 December 2016</p>
+          <a href="../blog/t2-html-css-dom-p2.html">Udacity Reflection - Part 2</a>
+        </li>
+          <li>
+            <p class="blog-date">06 December 2016</p>
+            <a href="../blog/t2-html-css-dom-p1.html">Udacity Reflection - Part 1</a>
+          </li>
+          <li>
+            <p class="blog-date">04 December 2016</p>
+            <a href="../blog/c1-time-and-habits-blog.html">Habit and Time management techniques</a>
+          </li>
+          <li>
+          <p class="blog-date">01 December 2016</p>
+          <a href="../blog/c1-reflection-blog.html">First Impressions 4nd reflections on the Q&amp;A  session with Sherif from DBC
+          </a>
+        </li>
+      </ul>
     </div>
 
 
