--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 
   <body>
     <div class="row" id="welcome-wrapper">
-      <header class="row site-header-container" id="homepage-header">
+      <header class="row site-header-container">
         <div class="name-container" id="homepage-name">
-          Dan <span class="bold">Blake</span>
+          <a href="index.html">Dan <span class="bold">Blake</span></a>
         </div>
         <div class="desktop-navigation-container" id="homepage-nav">
           <ul>
             <li><a href="#">About</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="pages/blog-list.html">Blog</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+            <li><a href="https://github.com/DanBlakeNZ" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+            <li><a href="https://nz.linkedin.com/in/danielblakenz" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+            <li><a href="mailto:dblakenz@hotmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
           </ul>
         </div>
       </header>
@@ -44,7 +44,7 @@
           <p>beautiful, clean and modern websites!</p>
         </div>
         <div id="welcome-button-container">
-          <a class="button hero-button" href="#">My Blog</a>
+          <a class="button hero-button" href="pages/blog-list.html">My Blog</a>
           <a class="button hero-button" href="#">My Work</a>
         </div>
       </div>
@@ -60,7 +60,7 @@
           <p>Currently I am based in Wellington, New Zealand where I am developing my web development skills at Enspiral DevAcademy. You can read more about my experience by checking out my blog.</p>
           <br>
           <p>I love the challange, creativity and problem solving that coding and web development brings and I have the goal of building sites that not only look great but also provide a fantasic user experience on any device.</p>
-          <a class="button hero-button" href="#">My Blog</a>
+          <a class="button hero-button" href="pages/blog-list.html">My Blog</a>
         </div>
         <div class="six columns">
           <img src="assets/images/me-pink-shaddow.jpg" alt=""  id="me-image">
@@ -77,9 +77,9 @@
             <h3>Let's chat!</h3>
             <p>Feel free to get in contact via:</p>
             <br>
-            <a href="#"><i class="fa fa-envelope fa-icon" aria-hidden="true"></i></a>
-            <a href="#"><i class="fa fa-linkedin-square fa-icon" aria-hidden="true"></i></a>
-            <a href="#"><i class="fa fa-github fa-icon" aria-hidden="true"></i></a>
+            <a href="mailto:dblakenz@hotmail.com"><i class="fa fa-envelope fa-icon" aria-hidden="true"></i></a>
+            <a href="https://nz.linkedin.com/in/danielblakenz" target="_blank"><i class="fa fa-linkedin-square fa-icon" aria-hidden="true"></i></a>
+            <a href="https://github.com/DanBlakeNZ" target="_blank"><i class="fa fa-github fa-icon" aria-hidden="true"></i></a>
             <br>
             <span id="made-by">Made by Dan Blake</span>
           </div>
