--- a/pages/blog-list.html
+++ b/pages/blog-list.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
     <title>Dan Blake - Blog</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
     <!-- My CSS Stylesheet-->
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog_stylesheet.css">
     <!-- Normalise CSS-->
@@ -34,6 +34,10 @@
 
       <h3 class="page-title">Blog Posts</h3>
       <ul id="blog-post-list">
+        <li>
+          <p class="blog-date">16 December 2016</p>
+          <a href="../blog/t3-design-to-web-blog.html.html">Responsive Web Design</a>
+        </li>
         <li>
           <p class="blog-date">11 December 2016</p>
           <a href="../blog/c2-emotional-intelligence.html">Search Inside Yourself - Chapter 1</a>
