--- a/pages/blog-list.html
+++ b/pages/blog-list.html
@@ -56,7 +56,7 @@
           </li>
           <li>
           <p class="blog-date">01 December 2016</p>
-          <a href="../blog/c1-reflection-blog.html">First Impressions 4nd reflections on the Q&amp;A  session with Sherif from DBC
+          <a href="../blog/c1-reflection-blog.html">First Impressions and reflections on the Q&amp;A  session with Sherif from DBC
           </a>
         </li>
       </ul>
