updated navigation and images to be SR friendly

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="name-container" id="homepage-name">
           <a href="index.html">Dan <span class="bold">Blake</span></a>
         </div>
-        <div class="desktop-navigation-container" id="homepage-nav">
+        <nav class="desktop-navigation-container" id="homepage-nav">
           <ul>
             <li><a href="#">About</a></li>
             <li><a href="pages/blog-list.html">Blog</a></li>
@@ -29,7 +29,7 @@
             <li><a href="https://nz.linkedin.com/in/danielblakenz" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
             <li><a href="mailto:dblakenz@hotmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
           </ul>
-        </div>
+        </nav>
       </header>
 
       <div id="welcome-section-container" class="section-container">
