added image to blog page. Fixed spelling errors for technical blog 3

--- a/pages/blog-list.html
+++ b/pages/blog-list.html
@@ -33,6 +33,10 @@
     <div class="section-container blog-contents">
 
       <h3 class="page-title">Blog Posts</h3>
+
+      <img src="../assets/images/poftfolio-small.jpg" id="blog-hero-image">
+
+
       <ul id="blog-post-list">
         <li>
           <p class="blog-date">16 December 2016</p>
