--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <a class="button hero-button" href="pages/blog-list.html">My Blog</a>
         </div>
         <div class="six columns">
-          <img src="assets/images/me-pink-shaddow.jpg" alt=""  id="me-image">
+          <img src="assets/images/me-pink-shaddow.jpg" alt="photo of me"  id="me-image">
         </div>
       </div>
     </div>
@@ -78,9 +78,9 @@
             <h3>Let's chat!</h3>
             <p>Feel free to get in contact via:</p>
             <br>
-            <a href="mailto:dblakenz@hotmail.com"><i class="fa fa-envelope fa-icon" aria-hidden="true"></i></a>
-            <a href="https://nz.linkedin.com/in/danielblakenz" target="_blank"><i class="fa fa-linkedin-square fa-icon" aria-hidden="true"></i></a>
-            <a href="https://github.com/DanBlakeNZ" target="_blank"><i class="fa fa-github fa-icon" aria-hidden="true"></i></a>
+            <a href="mailto:dblakenz@hotmail.com"><i class="fa fa-envelope fa-icon" aria-hidden="true" alt="email me"></i></a>
+            <a href="https://nz.linkedin.com/in/danielblakenz" target="_blank"><i class="fa fa-linkedin-square fa-icon" aria-hidden="true" alt="linked in"></i></a>
+            <a href="https://github.com/DanBlakeNZ" target="_blank"><i class="fa fa-github fa-icon" aria-hidden="true" alt="git hub"></i></a>
             <br>
             <span id="made-by">Made by Dan Blake</span>
           </div>
