adding cultural blog 2

--- a/pages/blog-list.html
+++ b/pages/blog-list.html
@@ -39,8 +39,12 @@
 
       <ul id="blog-post-list">
         <li>
+          <p class="blog-date">18 December 2016</p>
+          <a href="../blog/c3-meditation-process.html">Search Inside Yourself - Chapter 2</a>
+        </li>
+        <li>
           <p class="blog-date">16 December 2016</p>
-          <a href="../blog/t3-design-to-web-blog.html.html">Responsive Web Design</a>
+          <a href="../blog/t3-design-to-web-blog.html">Responsive Web Design</a>
         </li>
         <li>
           <p class="blog-date">11 December 2016</p>
