adding JavaScript Basics Blog Post. Updated Blog list

--- a/pages/blog-list.html
+++ b/pages/blog-list.html
@@ -39,6 +39,10 @@
 
       <ul id="blog-post-list">
         <li>
+          <p class="blog-date">12 January 2017</p>
+          <a href="../blog/t4-javascript-basics.html">JavaScript Basics</a>
+        </li>
+        <li>
           <p class="blog-date">18 December 2016</p>
           <a href="../blog/c3-meditation-process.html">Search Inside Yourself - Chapter 2</a>
         </li>
