adding technical blog 5

--- a/pages/blog-list.html
+++ b/pages/blog-list.html
@@ -39,6 +39,10 @@
 
       <ul id="blog-post-list">
         <li>
+          <p class="blog-date">18 January 2017</p>
+          <a href="../blog/t5-problem-solving.html">Problem Solving and Debugging</a>
+        </li>
+        <li>
           <p class="blog-date">12 January 2017</p>
           <a href="../blog/c4-daily-mindfulness.html">Search Inside Yourself - Chapter 3</a>
         </li>
