--- a/pages/blog-list.html
+++ b/pages/blog-list.html
@@ -39,6 +39,14 @@
 
       <ul id="blog-post-list">
         <li>
+          <p class="blog-date">27 January 2017</p>
+          <a href="../blog/t6-js-language.html">Javascript Language</a>
+        </li>
+        <li>
+          <p class="blog-date">27 January 2017</p>
+          <a href="../blog/c6-control.html">Search Inside Yourself - Chapter 5</a>
+        </li>
+        <li>
           <p class="blog-date">19 January 2017</p>
           <a href="../blog/c5-self-confidence.html">Search Inside Yourself - Chapter 4</a>
         </li>
