update contents page

--- a/pages/blog-list.html
+++ b/pages/blog-list.html
@@ -39,6 +39,10 @@
 
       <ul id="blog-post-list">
         <li>
+          <p class="blog-date">03 February 2017</p>
+          <a href="../blog/c7-motivation.html">Search Inside Yourself - Chapter 7</a>
+        </li>
+        <li>
           <p class="blog-date">27 January 2017</p>
           <a href="../blog/t6-js-language.html">Javascript Language</a>
         </li>
