--- a/projects/colourKakapo/index.html
+++ b/projects/colourKakapo/index.html
@@ -92,7 +92,7 @@
     </svg>
     </div>
     <div id="swatch-container">
-    <div class="color-satch-row">
+    <div class="color-swatch-row">
       <ul>
         <li class="color" id="swatch01" data-color="000000"></li>
         <li class="color" id="swatch02" data-color="FFFFFF"></li>
@@ -101,16 +101,16 @@
         <li class="color" id="swatch05" data-color="008000"></li>
       </ul>
     </div>
-    <div class="color-satch-row">
+    <div class="color-swatch-row">
       <ul>
         <li class="color" id="swatch06" data-color="FF0000"></li>
         <li class="color" id="swatch07" data-color="FFDAB9"></li>
         <li class="color" id="swatch08" data-color="008080"></li>
-        <li class="color selected" id="swatch09" data-color="8B4513"></li>
+        <li class="color selected" id="swatch09" data-color="8B4513"><i class="fa fa-paint-brush" aria-hidden="true"></i></li>
         <li class="color" id="swatch10" data-color="663399"></li>
       </ul>
     </div>
-    <div class="color-satch-row">
+    <div class="color-swatch-row">
       <ul>
         <li class="color" id="swatch11" data-color="696969"></li>
         <li class="color" id="swatch12" data-color="FFFF00"></li>
@@ -119,7 +119,7 @@
         <li class="color" id="swatch15" data-color="DC143C"></li>
       </ul>
     </div>
-    <div class="color-satch-row">
+    <div class="color-swatch-row">
       <ul>
         <li class="color" id="swatch16" data-color="F0E68C"></li>
         <li class="color" id="swatch17" data-color="FFF0F5"></li>
@@ -134,15 +134,11 @@
 
 </div>
 
+<!-- FontAwesome CDN -->
+<script src="https://use.fontawesome.com/08c4c69269.js"></script>
 
 
-
-
-
-
-
-
-<!-- jQuery first, then Tether, then Bootstrap JS. -->
+<!-- jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
 
 <!--My script-->
